fix: #32 address padding in IE11

--- a/src/sassPartials/_shared_style.scss
+++ b/src/sassPartials/_shared_style.scss
@@ -15,8 +15,9 @@
 
   @include transition;
 
+  // !important us being used to address Issue #32
   @include breakpoint-narrow {
-    padding: var(--ods-button-vertical-padding) var(--ods-button-horizontal-padding-medium);
+    padding: var(--ods-button-vertical-padding) var(--ods-button-horizontal-padding-medium) !important;
   }
 
   user-select: none;
