--- a/src/sassPartials/_ods-button.scss
+++ b/src/sassPartials/_ods-button.scss
@@ -147,8 +147,9 @@ svg {
     }
   }
 
+  // !important us being used to address Issue #32
   &--condensed {
-    padding: var(--ods-button-vertical-padding) var(--ods-button-horizontal-padding-narrow);
+    padding: var(--ods-button-vertical-padding) var(--ods-button-horizontal-padding-narrow) !important;
   }
 
   &--responsive {
