style: update typo on comment

--- a/demo/sass/style.scss
+++ b/demo/sass/style.scss
@@ -2,7 +2,7 @@
 @import "./node_modules/@alaskaairux/orion-design-tokens/dist/tokens/SCSSVariables";
 @import "./node_modules/@alaskaairux/orion-design-tokens/dist/tokens/SassCustomProperties";
 
-// Import generated Design Token variables
+// Import legacy Design Token variables
 @import "./node_modules/@alaskaairux/orion-design-tokens/dist/tokens/tokenVariables";
 @import "./node_modules/@alaskaairux/orion-design-tokens/dist/tokens/tokenProperties";
 
